Changed "large assembly" and "group" to "great" when referring to people or gods, etc. for consistency.

--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -10,10 +10,10 @@ next: DA_11.html
 # [The Long Discourses](index.html)
 ## 10. Going Up to Ten
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Aṅga accompanied by a large group of 1,250 monks. They went to the city of Campā and stayed near Lake Gargarā.[\[2\]](#n2){:#ref2}
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Aṅga accompanied by a great assembly of 1,250 monks. They went to the city of Campā and stayed near Lake Gargarā.[\[2\]](#n2){:#ref2}
 {:#p1}
 
-2\. On the fifteenth-day full moon, the Bhagavān sat in an open area with a large assembly surrounding him. After teaching the Dharma all night, he addressed Śāriputra, “The monks have gathered today from the four directions. They’ve all diligently shaken off their sleepiness and want to listen to a Dharma teaching, but I’m suffering from back pain. I’m going to take a break. You can teach the Dharma for the monks now.”
+2\. On the fifteenth-day full moon, the Bhagavān sat in an open area with a great assembly surrounding him. After teaching the Dharma all night, he addressed Śāriputra, “The monks have gathered today from the four directions. They’ve all diligently shaken off their sleepiness and want to listen to a Dharma teaching, but I’m suffering from back pain. I’m going to take a break. You can teach the Dharma for the monks now.”
 {:#p2}
 
 3\. Śāriputra accepted the Buddha’s instruction. The Bhagavān then folded his outer robe four times and laid on his right side like a lion with his feet together.
@@ -423,16 +423,16 @@ The monks accepted his instructions and listened.
 131\. “[5] If a monk has faith, precepts, much learning, and can teach Dharma but can’t train the assembly, then his religious practice is incomplete. When a monk has faith, precepts, much learning, can teach Dharma, and can train the assembly, then his religious practice is complete.
 {:#p131}
 
-132\. “[6] If a monk has faith, precepts, much learning, can teach Dharma, and can train the assembly but can’t explain the Dharma’s words in detail to a large assembly, then his religious practice is incomplete. When a monk has faith, precepts, much learning, can teach Dharma, can train the assembly, and can explain the Dharma’s words in detail to a large assembly, then his religious practice is complete.
+132\. “[6] If a monk has faith, precepts, much learning, can teach Dharma, and can train the assembly but can’t explain the Dharma’s words in detail to a great assembly, then his religious practice is incomplete. When a monk has faith, precepts, much learning, can teach Dharma, can train the assembly, and can explain the Dharma’s words in detail to a great assembly, then his religious practice is complete.
 {:#p132}
 
-133\. “[7] If a monk has faith, precepts, much learning, can teach Dharma, can train the community, and can explain the Dharma’s words in detail to a large assembly but hasn’t attained the four dhyānas, then his religious practice is incomplete. When a monk has faith, precepts, much learning, can teach Dharma, can train the assembly, can explain the Dharma’s words in detail to a large assembly, and has attained the four dhyānas, then his religious practice is complete.
+133\. “[7] If a monk has faith, precepts, much learning, can teach Dharma, can train the community, and can explain the Dharma’s words in detail to a great assembly but hasn’t attained the four dhyānas, then his religious practice is incomplete. When a monk has faith, precepts, much learning, can teach Dharma, can train the assembly, can explain the Dharma’s words in detail to a great assembly, and has attained the four dhyānas, then his religious practice is complete.
 {:#p133}
 
-134\. “[8] If a monk has faith, precepts, much learning, can teach Dharma, can train the assembly, can explain the Dharma’s words in detail to a large assembly, and has attained the four dhyānas but hasn’t traversed the eight liberations forward and backward, then his religious practice is incomplete. When a monk has faith, precepts, much learning, can teach Dharma, can train the assembly, can explain the Dharma’s words in detail to a large assembly, has attained the four dhyānas, and has traversed the eight liberations forward and backward, then his religious practice is complete.
+134\. “[8] If a monk has faith, precepts, much learning, can teach Dharma, can train the assembly, can explain the Dharma’s words in detail to a great assembly, and has attained the four dhyānas but hasn’t traversed the eight liberations forward and backward, then his religious practice is incomplete. When a monk has faith, precepts, much learning, can teach Dharma, can train the assembly, can explain the Dharma’s words in detail to a great assembly, has attained the four dhyānas, and has traversed the eight liberations forward and backward, then his religious practice is complete.
 {:#p134}
 
-135\. “[9] Suppose a monk has faith, precepts, much learning, can teach Dharma, can train the assembly, can explain the Dharma’s words in detail to a large assembly, has attained the four dhyānas, and has traversed the eight liberations forward and backward. Still, he can’t end being contaminated, become uncontaminated, liberate his mind and wisdom, and personally realize in the present life, ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I won’t be subject to another existence.’ His religious practice is incomplete. Suppose a monk has faith, precepts, much learning, can teach Dharma, can train the assembly, can explain the Dharma’s words in detail to a large assembly, has attained the four dhyānas, and has traversed the eight liberations forward and backward. He also has abandoned being contaminated, become uncontaminated, liberated his mind and wisdom, and personally realized in the present life, ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I won’t be subject to another existence.’ His religious practice is complete.
+135\. “[9] Suppose a monk has faith, precepts, much learning, can teach Dharma, can train the assembly, can explain the Dharma’s words in detail to a great assembly, has attained the four dhyānas, and has traversed the eight liberations forward and backward. Still, he can’t end being contaminated, become uncontaminated, liberate his mind and wisdom, and personally realize in the present life, ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I won’t be subject to another existence.’ His religious practice is incomplete. Suppose a monk has faith, precepts, much learning, can teach Dharma, can train the assembly, can explain the Dharma’s words in detail to a great assembly, has attained the four dhyānas, and has traversed the eight liberations forward and backward. He also has abandoned being contaminated, become uncontaminated, liberated his mind and wisdom, and personally realized in the present life, ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I won’t be subject to another existence.’ His religious practice is complete.
 {:#p135}
 
 136\. “What are nine things to produce? Nine concepts: The concept of impurity, concept that food is impure, concept that nothing in the world is enjoyable, concept of death, concept of impermanence, concept of the pain of impermanence,[\[9\]](#n9){:#ref9} concept of the lack of self in pain,[\[10\]](#n10){:#ref10} concept of the end [of suffering], and concept of lacking desire.
