--- a/01_agama/dirgha/DA_11.md
+++ b/01_agama/dirgha/DA_11.md
@@ -10,7 +10,7 @@ next: DA_12.html
 # [The Long Discourses](index.html)
 ## 11. Increasing One by One
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by a large assembly of 1,250 monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “I will give you a discourse on the sublime teaching in which all the words in the beginning, middle, and end are true, the content and expression are pure, and the religious life is perfected. It’s called the teaching that increases one by one. All of you, listen closely and consider it well! I will teach it for you.”
