--- a/01_agama/dirgha/DA_15.md
+++ b/01_agama/dirgha/DA_15.md
@@ -10,7 +10,7 @@ next: DA_16.html
 # [The Long Discourses](index.html)
 ## 15. Anomiya
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in the land of Anomiya of Maineya.[\[2\]](#n2){:#ref2} He was accompanied by a large assembly of 1,250 monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in the land of Anomiya of Maineya.[\[2\]](#n2){:#ref2} He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
 
 #### Why Sunakṣatra Returned to the Lay Life
@@ -248,10 +248,10 @@ next: DA_16.html
 60\. “The wanderer Pāṭiputra replied to Cāla, ‘I’ll return! I’ll return!’ After saying this, he fidgeted uneasily on his rope seat. His foot became ensnared in the rope seat, and he couldn’t free it. How could he have gone to the Bhagavān?
 {:#p60}
 
-61\. “Cāla then said to Pāṭiputra, ‘You are ignorant, just saying these empty words, ‘I’ll return! I’ll return!’ Still, you can’t free yourself from this rope seat. How can you go to that large assembly?’
+61\. “Cāla then said to Pāṭiputra, ‘You are ignorant, just saying these empty words, ‘I’ll return! I’ll return!’ Still, you can’t free yourself from this rope seat. How can you go to that great assembly?’
 {:#p61}
 
-62\. “After chastising Pāṭiputra, Cāla returned to the large assembly and reported, ‘I carried the assembly’s message to Pāṭiputra and told him. His response to me was ‘I’ll return! I’ll return!’” Then, he turned his body on that rope seat, and his foot was snared in the seat. He couldn’t free himself from it. He couldn’t free himself from the rope seat, so how will he come to this assembly?’
+62\. “After chastising Pāṭiputra, Cāla returned to the great assembly and reported, ‘I carried the assembly’s message to Pāṭiputra and told him. His response to me was ‘I’ll return! I’ll return!’” Then, he turned his body on that rope seat, and his foot was snared in the seat. He couldn’t free himself from it. He couldn’t free himself from the rope seat, so how will he come to this assembly?’
 {:#p62}
 
 63\. “There was then a Licchavi son named Dhūma in the assembly. He rose from his seat, adjusted his robe to bare his right shoulder, and knelt on his knee. With his palms together, he addressed the assembly, ‘I’m an insignificant servant to this great assembly. I’ll go and bring that man here.’”
@@ -266,7 +266,7 @@ next: DA_16.html
 66\. “The wanderer Pāṭiputra replied, ‘I’ll return! I’ll return!’ After saying this, he turned uneasily on his rope seat, and it snared his foot. He couldn’t free himself from the rope seat, so how could he travel on foot to the Bhagavān?
 {:#p66}
 
-67\. “Dhūma then said to Pāṭiputra, ‘You are ignorant, just saying these empty words, ‘I’ll return! I’ll return!’ Still, you can’t free yourself from this rope seat. How can you go to that large assembly?’
+67\. “Dhūma then said to Pāṭiputra, ‘You are ignorant, just saying these empty words, ‘I’ll return! I’ll return!’ Still, you can’t free yourself from this rope seat. How can you go to that great assembly?’
 {:#p67}
 
 68\. Dhūma also said to Pāṭiputra, ‘Some wise people use parables to understand things. Far away, there was a lion, a king of beasts, that lived in a deep forest. It came out of its cave at daybreak, surveyed the four directions, and boldly roared three times. Afterward, it would go wandering in search of meat to eat.
@@ -302,13 +302,13 @@ It could only bark like a jackal.’
 73\. “That Licchavi son Dhūma told him, ‘You are likewise. As a result of the Buddha’s magnanimity arising in the world, you receive people’s offerings, but now you compete with the Tathāgata.’
 {:#p73}
 
-74\. “After chastising him with those four kinds of metaphor, the Licchavi son Dhūma returned to the large assembly and reported, ‘I carried the assembly’s message to Pāṭiputra and told him. His response to me was ‘I’ll return! I’ll return!’” Then, he turned his body on that rope seat, and his foot was snared in the seat. He couldn’t free himself from it. He couldn’t free himself from the rope seat, so how will he come to this assembly?’
+74\. “After chastising him with those four kinds of metaphor, the Licchavi son Dhūma returned to the great assembly and reported, ‘I carried the assembly’s message to Pāṭiputra and told him. His response to me was ‘I’ll return! I’ll return!’” Then, he turned his body on that rope seat, and his foot was snared in the seat. He couldn’t free himself from it. He couldn’t free himself from the rope seat, so how will he come to this assembly?’
 {:#p74}
 
 75\. “I told Dhūma’s son, ‘I told you before, it isn’t possible to make this man come to the Buddha. Even if you tied a leather cord to him tightly and pulled him with a herd of cattle, his body would be torn apart. He’ll never abandon such statements, such views, and pride to come to me.’
 {:#p75}
 
-76\. “Wanderer, I then explained a variety of teachings for that large assembly, instructing, benefiting, and making them rejoice. In that assembly, I roared the lion’s roar three times. I then ascended into the sky and returned home.”
+76\. “Wanderer, I then explained a variety of teachings for that great assembly, instructing, benefiting, and making them rejoice. In that assembly, I roared the lion’s roar three times. I then ascended into the sky and returned home.”
 {:#p76}
 
 #### The Origin of the World and Beings
