--- a/01_agama/dirgha/DA_16.md
+++ b/01_agama/dirgha/DA_16.md
@@ -10,7 +10,7 @@ next: DA_17.html
 # [The Long Discourses](index.html)
 ## 16. Sujata
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying on Mount Gṛdhrakūṭa of Rājagṛha. He was accompanied by a large assembly of 1,250 monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying on Mount Gṛdhrakūṭa of Rājagṛha. He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
 
 2\. It was then that the Bhagavān put on his robe and took his bowl into the city to solicit alms. At the time, there was a prominent man’s son named Sujata[\[2\]](#n2){:#ref2} in Rājagṛha. Early in the morning, he left the city to go for a walk in a park. He bathed first, wetting his entire body. He then bowed in all directions around him: To the east, west, south, north, above, and below.
