--- a/01_agama/dirgha/DA_17.md
+++ b/01_agama/dirgha/DA_17.md
@@ -10,7 +10,7 @@ next: DA_18.html
 # [The Long Discourses](index.html)
 ## 17. Purification
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1}  One time, the Buddha was staying at Layman [Vedhañña]’s Grove in the country of Kapilavastu.[\[2\]](#n2){:#ref2} He was accompanied by a large assembly of 1,250 monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1}  One time, the Buddha was staying at Layman [Vedhañña]’s Grove in the country of Kapilavastu.[\[2\]](#n2){:#ref2} He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
 
 #### News of Nigranthaputra’s Death
@@ -113,7 +113,7 @@ next: DA_18.html
 31\. “Cunda, to tell the truth, I should say that I see what can’t be seen. How do I see what can’t be seen? All whose religious practice is pure, complete, plainly explained, and widely known are said to see what can’t be seen.”
 {:#p31}
 
-32\. The Bhagavān then told the monks, “Udraka Rāmaputra made this statement to a large assembly: ‘There is what’s seen and not seen. What is called the seen and not seen? It’s like a knife that can be seen, and a sword that cannot be seen.’ Monks, Rāmaputra made that metaphor with the ignorant words of ordinary people.
+32\. The Bhagavān then told the monks, “Udraka Rāmaputra made this statement to a great assembly: ‘There is what’s seen and not seen. What is called the seen and not seen? It’s like a knife that can be seen, and a sword that cannot be seen.’ Monks, Rāmaputra made that metaphor with the ignorant words of ordinary people.
 {:#p32}
 
 33\. “Thus, Cunda, to tell the truth, I should say I see what’s not seen. What is seen and not seen? You should correctly say, ‘All whose religious practice is pure, complete, plainly explained, and widely known see what can’t be seen.’
