--- a/01_agama/dirgha/DA_18.md
+++ b/01_agama/dirgha/DA_18.md
@@ -10,7 +10,7 @@ next: DA_20.html
 # [The Long Discourses](index.html)
 ## 18. Personal Gladness
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the city of Nālanda in Prāvārika’s mango grove. He was accompanied by a large assembly of 1,250 monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the city of Nālanda in Prāvārika’s mango grove. He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
 
 2\. It was then that the elder Śāriputra was in a quiet dwelling and thought to himself, “I know with certainty that there’s no ascetic or priest in the past, future, or present whose powers of wisdom, miraculous ability, virtue, or awakening match those of the Tathāgata, Arhat, and Completely Awakened One.”
