--- a/01_agama/dirgha/DA_19.md
+++ b/01_agama/dirgha/DA_19.md
@@ -10,10 +10,10 @@ next: DA_20.html
 # [The Long Discourses](index.html)
 ## 19. The Great Congregation
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Kapilavastu in the country of the Śākyans. He was accompanied by a large assembly of five hundred monks, all of whom were arhats. Marvelous gods had also gathered from the ten directions to honor the Tathāgata and the saṅgha of monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Kapilavastu in the country of the Śākyans. He was accompanied by a great assembly of five hundred monks, all of whom were arhats. Marvelous gods had also gathered from the ten directions to honor the Tathāgata and the saṅgha of monks.
 {:#p1}
 
-2\. It was then that four Śuddhâvāsa gods up in heaven each thought to themselves, “Today, the Bhagavān is staying at Kapilavastu in the country of the Śākyans. He’s accompanied by a large assembly of five hundred monks, all of whom are arhats. Marvelous gods have also gathered from the ten directions to honor the Tathāgata and the saṅgha of monks. Now, let’s go visit the Bhagavān as well. We’ll each praise the Tathāgata with a verse.”
+2\. It was then that four Śuddhâvāsa gods up in heaven each thought to themselves, “Today, the Bhagavān is staying at Kapilavastu in the country of the Śākyans. He’s accompanied by a great assembly of five hundred monks, all of whom are arhats. Marvelous gods have also gathered from the ten directions to honor the Tathāgata and the saṅgha of monks. Now, let’s go visit the Bhagavān as well. We’ll each praise the Tathāgata with a verse.”
 {:#p2}
 
 3\. Those four Śuddhâvāsa gods then disappeared from their heaven and arrived at Kapilavastu of the Śākyans in the time it takes a strong man to flex his arm. Once they had arrived, those four Śuddhâvāsa gods bowed their heads at the Buddha’s feet and stood to one side.
