--- a/01_agama/dirgha/DA_20.md
+++ b/01_agama/dirgha/DA_20.md
@@ -9,7 +9,7 @@ next: DA_21.html
 # [The Long Discourses](index.html)
 ## 20. Ambāṣṭha
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Kośala accompanied by a large assembly of 1,250 monks. They went to the Kośala priest village of Icchānaṅgala and stopped to rest in a citron grove.[\[2\]](#n2){:#ref2}
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Kośala accompanied by a great assembly of 1,250 monks. They went to the Kośala priest village of Icchānaṅgala and stopped to rest in a citron grove.[\[2\]](#n2){:#ref2}
 {:#p1}
 
 #### Puṣkarasārin Sends Ambāṣṭha to Meet the Buddha
@@ -20,7 +20,7 @@ next: DA_21.html
 3\. His best student disciple, named Ambāṣṭha,[\[5\]](#n5){:#ref5} was descended from seven generations of fathers and mothers who were genuine [priests], so he wasn’t slighted by others. He had mastered the three Vedas and could discern all the various kinds of scriptures. He was also skilled in the techniques of [recognizing] the great man’s signs and [performing] sacrifices and rituals. He had 500 student disciples as well whom he taught without exception, the same as his teacher.
 {:#p3}
 
-4\. The priest Puṣkarasārin heard: “The ascetic Gautama of the Śākya clan, who had left home and achieved awakening, has arrived at the Kośala priest village of Icchānaṅgala and stopped to rest in a citron grove. He’s accompanied by a large assembly of 1,250 monks and possesses a great reputation that’s heard throughout the world: ‘He’s a Tathāgata, an Arhat, and a Completely Awakened One who has perfected the ten epithets. Among gods, worldly men, and demons, whether they’re Māra and the gods or ascetics and priests, he’s self-realized and teaches the Dharma for others. It’s good in the beginning, middle, and end, complete in content and expression, and purifies the religious life.’”
+4\. The priest Puṣkarasārin heard: “The ascetic Gautama of the Śākya clan, who had left home and achieved awakening, has arrived at the Kośala priest village of Icchānaṅgala and stopped to rest in a citron grove. He’s accompanied by a great assembly of 1,250 monks and possesses a great reputation that’s heard throughout the world: ‘He’s a Tathāgata, an Arhat, and a Completely Awakened One who has perfected the ten epithets. Among gods, worldly men, and demons, whether they’re Māra and the gods or ascetics and priests, he’s self-realized and teaches the Dharma for others. It’s good in the beginning, middle, and end, complete in content and expression, and purifies the religious life.’”
 {:#p4}
 
 5\. [Puṣkarasārin said:] “Since he’s a realized person, I should go and meet him! Now, I’d like to examine that ascetic Gautama to be certain he has the 32 signs. His name is heard everywhere, but is what they say about him true? Is there some way I could see the Buddha’s signs?’
@@ -313,7 +313,7 @@ He replied, “Very well. I’d be glad to hear it.”
 81\. “How is he unified in mind? Suppose such a monk walks back and forth, looks right and left, turns, bends, and looks around. He holds his robe and bowl and takes the meal he receives. He urinates and defecates. He sleeps, wakes, sits, stands, speaks, and remains silent. He’s mindful and unified in mind at all times, and he doesn’t lose his composure. This is being unified in mind.
 {:#p81}
 
-82\. “It’s like someone walking with a large assembly. Whether they walk in front, in the middle, or in the back, they’re always at ease and without any anxiety. Student, when a monk thus walks back and forth … speaks, and remains silent, he’s always mindful and unified in mind without any sorrow or fear.
+82\. “It’s like someone walking with a great assembly. Whether they walk in front, in the middle, or in the back, they’re always at ease and without any anxiety. Student, when a monk thus walks back and forth … speaks, and remains silent, he’s always mindful and unified in mind without any sorrow or fear.
 {:#p82}
 
 83\. “A monk has such noble precepts and attains noble faculties. When eating, they stop when satisfied. In the early evening and late at night, they’re diligent and awake. [During the daytime,] they’re always mindful, unified in mind, and undisturbed. They happily reside in a quiet place, under a tree, or in a charnel ground. Whether they stay in a mountain cave, on open ground, or in a refuse heap, when it’s time to solicit alms, they wash their hands and feet and put their robe and bowl in a safe place when they return. They sit cross-legged with their body erect and correctly mindful. They then fix their attention to what’s in front of them.
@@ -617,7 +617,7 @@ His teacher said, “I had an intelligent disciple to send as my messenger, but 
 167\. He also said to the Buddha, “Suppose I’m with my assembly and see the Buddha rise. If I bare my right shoulder and declare my clan’s name, you should consider it as though I’m venerating the Tathāgata. Why is that? I’ve received another’s fiefdom. If I were to dismount from my chariot, I would lose this fiefdom and a bad reputation would be circulated about me.”
 {:#p167}
 
-168\. He also said to the Buddha, “I take refuge in the Buddha, the Dharma, and the Saṅgha. Permit me to be a layman of the correct teaching! Hereafter, I won’t kill, steal, commit adultery, lie, or drink alcohol. Please let the Bhagavān and those in this large assembly accept my invitation.”
+168\. He also said to the Buddha, “I take refuge in the Buddha, the Dharma, and the Saṅgha. Permit me to be a layman of the correct teaching! Hereafter, I won’t kill, steal, commit adultery, lie, or drink alcohol. Please let the Bhagavān and those in this great assembly accept my invitation.”
 {:#p168}
 
 #### The Buddha Visits Puṣkarasārin
@@ -625,7 +625,7 @@ His teacher said, “I had an intelligent disciple to send as my messenger, but 
 169\. The priest saw that the Buddha remained silent and knew that he had given his consent. He then rose from his seat and departed, bowing to the Buddha and circling him three times without thinking about it. He went back and prepared meals of fine delicacies. When they were ready, he returned and said, “It’s time.”
 {:#p169}
 
-170\. The Bhagavān then put on his robe and took his bowl to the priest’s house with that large assembly of 1,250 monks. Arriving, they prepared their seats and sat down.
+170\. The Bhagavān then put on his robe and took his bowl to the priest’s house with that great assembly of 1,250 monks. Arriving, they prepared their seats and sat down.
 {:#p170}
 
 171\. The priest then personally served the meals, giving a variety of sweet delicacies to the Buddha and the Saṅgha. When they finished eating and washing their bowls, the priest took his disciple Ambāṣṭha to the Buddha with his right hand and said, “Please let the Tathāgata permit us to repent for our wrongdoing! Please let the Tathāgata permit us to repent for our wrongdoing!” He repeated this three times.
@@ -648,7 +648,7 @@ His teacher said, “I had an intelligent disciple to send as my messenger, but 
 176\. He then said to the Buddha, “Now, I take refuge in the Buddha, the Dharma, and the Saṅgha of monks three times. Permit me to become a layman of the correct teaching! For the rest of my life, I won’t kill, steal, commit adultery, lie, or drink alcohol. Please let the Bhagavān and the great assembly have pity on me and accept my invitation for the next seven days.” The Bhagavān then silently consented to this.
 {:#p176}
 
-177\. During the next seven days, the priest gave a variety of offerings to the Buddha and his large assembly. After that, the Bhagavān traveled among the people.
+177\. During the next seven days, the priest gave a variety of offerings to the Buddha and his great assembly. After that, the Bhagavān traveled among the people.
 {:#p177}
 
 178\. Not long after the Buddha departed, the priest Puṣkarasārin fell sick, and his life ended. When the monks heard that this priest had given offerings to the Buddha for seven days before his life ended, they each thought, “Where was he born after his life ended?”
