--- a/01_agama/dirgha/DA_22.md
+++ b/01_agama/dirgha/DA_22.md
@@ -10,7 +10,7 @@ next: DA_23.html
 # [The Long Discourses](index.html)
 ## 22. Śroṇatāṇḍya
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in Aṅga accompanied by a large assembly of 1,250 monks. They traveled among the people, stopping to stay at the city of Campā by the side of Gargā Pond.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in Aṅga accompanied by a great assembly of 1,250 monks. They traveled among the people, stopping to stay at the city of Campā by the side of Gargā Pond.
 {:#p1}
 
 2\. At the time, there was a priest named Śroṇatāṇḍya[\[2\]](#n2){:#ref2} who was residing in Campā, a city that was populous, thriving, and bountiful. King Prasenajit had bestowed the city to the priest Śroṇatāṇḍya as his priestly due.
