--- a/01_agama/dirgha/DA_24.md
+++ b/01_agama/dirgha/DA_24.md
@@ -10,7 +10,7 @@ next: DA_25.html
 # [The Long Discourses](index.html)
 ## 24. Dhruva
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the city of Nālanda in Prāvārika’s mango grove.[\[2\]](#n2){:#ref2} He was accompanied by a large assembly of 1,250 monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the city of Nālanda in Prāvārika’s mango grove.[\[2\]](#n2){:#ref2} He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
 
 2\. At the time, there was a prominent man’s son named Dhruva[\[3\]](#n3){:#ref3} who came to the Buddha, bowed his head at his feet, and sat down to one side. That prominent man’s son said to the Buddha, “It would be excellent, Bhagavān, if you could please tell the monks, ‘If a priest, a prominent man’s son, or a householder comes, show them the superhuman state with a display of miraculous abilities.’”
@@ -25,7 +25,7 @@ next: DA_25.html
 5\. The Buddha again told Dhruva, “I never instruct the monks to show the superhuman state with a display of miraculous abilities. I simply teach my disciples to peacefully contemplate the path in an empty and quiet place. If they have virtues, they should keep them to themselves. If they have defects, they should disclose them.”
 {:#p5}
 
-6\. The prominent man’s son Dhruva said to the Buddha, “I don’t have doubts about the superhuman state. It’s only that the region of Nālanda is bountiful, and the population is thriving. If someone were to display miraculous abilities, they would profit greatly by it, and the Buddha and his large assembly are skilled at converting others and spreading the path.”
+6\. The prominent man’s son Dhruva said to the Buddha, “I don’t have doubts about the superhuman state. It’s only that the region of Nālanda is bountiful, and the population is thriving. If someone were to display miraculous abilities, they would profit greatly by it, and the Buddha and his great assembly are skilled at converting others and spreading the path.”
 {:#p6}
 
 7\. The Buddha once again told Dhruva, “I never instruct the monks to show the superhuman state with a display of miraculous abilities. I simply teach my disciples to peacefully contemplate the path in an empty and quiet place. If they have virtues, they should keep them to themselves. If they have defects, they should disclose them.
