--- a/01_agama/dirgha/DA_25.md
+++ b/01_agama/dirgha/DA_25.md
@@ -10,7 +10,7 @@ next: DA_26.html
 # [The Long Discourses](index.html)
 ## 25. The Naked Wanderer
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the deer preserve near Karṇakāṣṭha of [Ujuññā].[\[2\]](#n2){:#ref2} He was accompanied by a large assembly of 1,250 monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the deer preserve near Karṇakāṣṭha of [Ujuññā].[\[2\]](#n2){:#ref2} He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
 
 2\. A naked wanderer from the Kāśyapa clan visited the Bhagavān. After they exchanged greetings, he sat to one side. That naked Kāśyapa said to the Buddha, “I hear that the ascetic Gautama criticizes all ritual practices and rebukes other ascetics, considering them corrupt. Gautama, suppose someone said, ‘The ascetic Gautama criticizes all the ritual practices and rebukes other ascetics, considering them corrupt.’ If someone says this is Dharma speech that accomplishes the teachings, would they not be slandering the ascetic Gautama?”
@@ -110,25 +110,25 @@ Kāśyapa said, “Gautama, who hasn’t Gautama made rejoice greatly, attain pu
 30\. “How is it, Kāśyapa? Would you say that Tathāgata isn’t courageous when he roars the lion’s roar? Don’t imagine this. The Tathāgata’s lion’s roar is courageous and fearless.
 {:#p30}
 
-31\. “Kāśyapa, would you say the Tathāgata’s courageous and fearless lion’s roar isn’t done in a large assembly? Don’t imagine this. The Tathāgata courageously roars the lion’s roar in a large assembly.
+31\. “Kāśyapa, would you say the Tathāgata’s courageous and fearless lion’s roar isn’t done in a great assembly? Don’t imagine this. The Tathāgata courageously roars the lion’s roar in a great assembly.
 {:#p31}
 
-32\. “Kāśyapa, would you say that the Tathāgata doesn’t teach the Dharma when he courageously roars the lion’s roar in a large assembly? Don’t imagine this. Why is that? The Tathāgata skillfully teaches the Dharma when he courageously and fearlessly roars the lion’s roar in a large assembly.
+32\. “Kāśyapa, would you say that the Tathāgata doesn’t teach the Dharma when he courageously roars the lion’s roar in a great assembly? Don’t imagine this. Why is that? The Tathāgata skillfully teaches the Dharma when he courageously and fearlessly roars the lion’s roar in a great assembly.
 {:#p32}
 
-33\. “How is it, Kāśyapa? Would you say that the audience isn’t unified in mind when the Tathāgata courageously and fearlessly roars the lion’s roar in a large assembly and skillfully teaches the Dharma? Don’t imagine this. Why is that? When the Tathāgata courageously and fearlessly roars the lion’s roar in a large assembly and skillfully teaches the Dharma, the audience is unified in mind.
+33\. “How is it, Kāśyapa? Would you say that the audience isn’t unified in mind when the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly and skillfully teaches the Dharma? Don’t imagine this. Why is that? When the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly and skillfully teaches the Dharma, the audience is unified in mind.
 {:#p33}
 
-34\. “How is it, Kāśyapa? Would you say that the audience doesn’t rejoice, believe, and accept it when the Tathāgata courageously and fearlessly roars the lion’s roar in a large assembly, skillfully teaches the Dharma, and those present listen with unified minds? Don’t imagine this. Why is that? When the Tathāgata courageously and fearlessly roars the lion’s roar in a large assembly, skillfully teaches the Dharma, and the audience that’s present listens with unified minds, they rejoice, believe, and accept it.
+34\. “How is it, Kāśyapa? Would you say that the audience doesn’t rejoice, believe, and accept it when the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly, skillfully teaches the Dharma, and those present listen with unified minds? Don’t imagine this. Why is that? When the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly, skillfully teaches the Dharma, and the audience that’s present listens with unified minds, they rejoice, believe, and accept it.
 {:#p34}
 
-35\. “Kāśyapa, would you say that the audience doesn’t make offerings when the Tathāgata courageously and fearlessly roars the lion’s roar in a large assembly, skillfully teaches the Dharma, and the audience rejoices, believes, and accepts it? Don’t imagine this. [Why is that?] When the Tathāgata courageously and fearlessly roars the lion’s roar in a large assembly, skillfully teaches the Dharma, and the audience rejoices, believes, and accepts it, they make offerings to him.
+35\. “Kāśyapa, would you say that the audience doesn’t make offerings when the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly, skillfully teaches the Dharma, and the audience rejoices, believes, and accepts it? Don’t imagine this. [Why is that?] When the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly, skillfully teaches the Dharma, and the audience rejoices, believes, and accepts it, they make offerings to him.
 {:#p35}
 
-36\. “Kāśyapa, would you say that the audience doesn’t shave their hair and beard, put on the three Dharma robes, leave home, and cultivate the path when the Tathāgata courageously and fearlessly roars the lion’s roar in a large assembly … and they believe, respect, and make offerings? Don’t imagine this. Why is that? When the Tathāgata courageously and fearlessly roars the lion’s roar in a large assembly … and they believe, respect, and make offerings, the audience shaves their hair and beard, put on the three Dharma robes, leave home, and cultivate the path.
+36\. “Kāśyapa, would you say that the audience doesn’t shave their hair and beard, put on the three Dharma robes, leave home, and cultivate the path when the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly … and they believe, respect, and make offerings? Don’t imagine this. Why is that? When the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly … and they believe, respect, and make offerings, the audience shaves their hair and beard, put on the three Dharma robes, leave home, and cultivate the path.
 {:#p36}
 
-37\. “Kāśyapa, would you say that the audience doesn’t practice the ultimate religious practice and reach the peaceful abode, which is Nirvāṇa without remainder, when the Tathāgata courageously and fearlessly roars the lion’s roar in a large assembly … and they leave home and cultivate the path? Don’t imagine this. Why is that? When the Tathāgata courageously and fearlessly roars the lion’s roar in a large assembly … and they leave home and cultivate the path, the audience does practice the ultimate religious practice and reach a peaceful abode, which is Nirvāṇa without remainder.”
+37\. “Kāśyapa, would you say that the audience doesn’t practice the ultimate religious practice and reach the peaceful abode, which is Nirvāṇa without remainder, when the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly … and they leave home and cultivate the path? Don’t imagine this. Why is that? When the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly … and they leave home and cultivate the path, the audience does practice the ultimate religious practice and reach a peaceful abode, which is Nirvāṇa without remainder.”
 {:#p37}
 
 38\. Kāśyapa then said to the Buddha, “How, Gautama, do I leave home and accept the full precepts in this teaching?”
