--- a/01_agama/dirgha/DA_26.md
+++ b/01_agama/dirgha/DA_26.md
@@ -10,7 +10,7 @@ next: DA_27.html
 # [The Long Discourses](index.html)
 ## 26. Knowledge of the Three Vedas
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was travelling among the people of Kośala accompanied by a large assembly of 1,250 monks. He went to the Kośala priest village of Icchānaṅgala and stopped to rest in a citron grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was travelling among the people of Kośala accompanied by a great assembly of 1,250 monks. He went to the Kośala priest village of Icchānaṅgala and stopped to rest in a citron grove.
 {:#p1}
 
 2\. A priest named Puṣkarasārin and another named [Tārukkha][\[2\]](#n2){:#ref2} had gone to the village of Icchānaṅgala for some minor reason.
