--- a/01_agama/dirgha/DA_27.md
+++ b/01_agama/dirgha/DA_27.md
@@ -9,7 +9,7 @@ next: DA_28.html
 # [The Long Discourses](index.html)
 ## 27. The Fruits of the Ascetics
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Rājagṛha in Jīvaka’s Mango Park. He was accompanied by a large assembly of 1,250 monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Rājagṛha in Jīvaka’s Mango Park. He was accompanied by a great assembly of 1,250 monks.
 {: #p1}
 
 #### Ajātaśatru Visits the Buddha
@@ -32,32 +32,32 @@ The great general said, “Tonight is clear and bright, and the day was no diffe
 5\. The king also summoned the priest Varṣākāra. He asked him, “Now, it’s the fifteenth day full moon. This night is clear and bright, and the day was no different. Shall we visit some ascetic or priest who can enlighten my mind?”
 {: #p5}
 
-Varṣākāra then said, “Tonight is clear and bright, and the day was no different. There is Pūraṇa Kāśyapa who leads a large assembly. Many have known him, and his fame is heard far away. Just as the ocean holds many things, he gets many kinds of support. Great king, it would be fitting to visit him and exchange greetings. If the king meets him, his mind might be enlightened.”
+Varṣākāra then said, “Tonight is clear and bright, and the day was no different. There is Pūraṇa Kāśyapa who leads a great assembly. Many have known him, and his fame is heard far away. Just as the ocean holds many things, he gets many kinds of support. Great king, it would be fitting to visit him and exchange greetings. If the king meets him, his mind might be enlightened.”
 
 6\. The king also summoned Varṣākāra’s brother [Sunidha] and asked him, “Tonight is clear and bright, and the day was no different. Would it be fitting to visit some ascetic or priest who can enlighten my mind?”
 {: #p6}
 
-[Sunidha] said, “Tonight is clear and bright, and the day was no different. There’s Maskarin Gośālīputra who leads a large assembly. Many have known him, and his fame is heard far away. Just as there’s nothing that the ocean doesn’t hold, he gets many kinds of support. Great king, it would be fitting to visit him and exchange greetings. If the king meets him, his mind might be enlightened.”
+[Sunidha] said, “Tonight is clear and bright, and the day was no different. There’s Maskarin Gośālīputra who leads a great assembly. Many have known him, and his fame is heard far away. Just as there’s nothing that the ocean doesn’t hold, he gets many kinds of support. Great king, it would be fitting to visit him and exchange greetings. If the king meets him, his mind might be enlightened.”
 
 7\. The king also summoned his minister of law-making and asked him, “Tonight is clear and bright, and the day was no different. Shall we go visit some ascetic or priest who can enlighten my mind?”
 {: #p7}
 
-That minister of law-making said, “There’s Ajita Keśakambala who leads a large assembly. Many have known him, and his fame is heard far away. Just as there’s nothing that the ocean doesn’t holds, he gets many kinds of support. Great king, it would be fitting to visit him and exchange greetings. If the king meets him, his mind might be enlightened.”
+That minister of law-making said, “There’s Ajita Keśakambala who leads a great assembly. Many have known him, and his fame is heard far away. Just as there’s nothing that the ocean doesn’t holds, he gets many kinds of support. Great king, it would be fitting to visit him and exchange greetings. If the king meets him, his mind might be enlightened.”
 
 8\. “The king also summoned his gate keeper [Kāla] and asked him, “Tonight is clear and bright, and the day was no different. Shall we visit some ascetic or priest who can enlighten my mind?”
 {: #p8}
 
-“That gate keeper [Kāla] said, “There’s Kakuda Kātyāyana who leads a large assembly. Many have known him, and his fame is heard far away. Just as there’s nothing that the ocean doesn’t hold, he gets many kinds of support. Great king, it would be fitting to visit him and exchange greetings. If the king meets him, his mind might be enlightened.”
+“That gate keeper [Kāla] said, “There’s Kakuda Kātyāyana who leads a great assembly. Many have known him, and his fame is heard far away. Just as there’s nothing that the ocean doesn’t hold, he gets many kinds of support. Great king, it would be fitting to visit him and exchange greetings. If the king meets him, his mind might be enlightened.”
 
 9\. The king also summoned Udāyin [Mandiputra] and asked him, “Tonight is clear and bright, and the day is no different. Shall we visit some ascetic or priest who can enlighten my mind?”
 {: #p9}
 
-Udāyin said, “There’s Saṃjayin Vairaṭīputra who leads a large assembly. Many have known him, and his fame is heard far away. Just as there’s nothing that the ocean doesn’t hold, he gets many kinds of support. Great king, it would be fitting to visit him and exchange greetings. If the king meets him, his mind might be enlightened.”
+Udāyin said, “There’s Saṃjayin Vairaṭīputra who leads a great assembly. Many have known him, and his fame is heard far away. Just as there’s nothing that the ocean doesn’t hold, he gets many kinds of support. Great king, it would be fitting to visit him and exchange greetings. If the king meets him, his mind might be enlightened.”
 
 10\. The king also summoned his brother Abhaya and asked him, “Tonight is clear and bright, and the day was no different. Shall we visit some ascetic or priest who can enlighten my mind?”
 {: #p10}
 
-His brother Abhaya said, “There’s Nirgrantha Jñātaputra who leads a large assembly. Many have known him, and his fame is heard far away. Just as there’s nothing that the ocean doesn’t hold, he gets many kinds of support. Great king, it would be fitting to visit him and exchange greetings. If the king meets him, his mind might be enlightened.”
+His brother Abhaya said, “There’s Nirgrantha Jñātaputra who leads a great assembly. Many have known him, and his fame is heard far away. Just as there’s nothing that the ocean doesn’t hold, he gets many kinds of support. Great king, it would be fitting to visit him and exchange greetings. If the king meets him, his mind might be enlightened.”
 
 11\. The king also summoned Prince Jīvaka and asked him, “Tonight is clear and bright, and the day was no different. Shall we visit some ascetic or priest who can enlighten my mind?”
 {: #p11}
