--- a/01_agama/dirgha/DA_28.md
+++ b/01_agama/dirgha/DA_28.md
@@ -9,7 +9,7 @@ next: DA_29.html
 # [The Long Discourses](index.html)
 ## 28. [Poṭṭhapāda]
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park of Śrāvastī. He was accompanied by a large assembly of 1,250 monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park of Śrāvastī. He was accompanied by a great assembly of 1,250 monks.
 {: #p1}
 
 2\. At sunrise, the Buddha put on his robe and took his bowl into Śrāvastī to solicit alms. The Bhagavān thought, “It’s too early to solicit today’s alms. I’d better go see [Poṭṭhapāda][\[2\]](#n2){:#ref2} in the wanderers’ grove. I’ll solicit alms later when it’s the right time.” The Bhagavān then went to the wanderers’ grove.
