--- a/01_agama/dirgha/DA_30-6.md
+++ b/01_agama/dirgha/DA_30-6.md
@@ -86,7 +86,7 @@ next: DA_30-7.html
 24\. “The [Asura] King also thinks of the great minister of asuras. The great minister of asuras then thinks to himself, ‘King [Rāhu] is thinking of me now!’ He gets himself ready and rides a treasure chariot to Asura King Rāhu while surrounded by a countless assembly of servants. He goes before the Asura King and then stands to one side.
 {:#p24}
 
-25\. “The [Asura] King also thinks of the lesser asuras. The lesser asuras then think to themselves, ‘King [Rāhu] is thinking of me now!’ They get themselves ready and ride treasure chariots to Asura King Rāhu with many large assemblies. They go before the Asura King and then stand to one side.
+25\. “The [Asura] King also thinks of the lesser asuras. The lesser asuras then think to themselves, ‘King [Rāhu] is thinking of me now!’ They get themselves ready and ride treasure chariots to Asura King Rāhu with many great assemblies. They go before the Asura King and then stand to one side.
 {:#p25}
 
 26\. “King Rāhu then gets himself ready by putting on precious ornaments and clothes. He rides a treasure chariot to Śāla Grove while surrounded by countless great assemblies. A spontaneous wind blows the gate open, a spontaneous wind clears the ground, and another spontaneous wind scatters flowers on the ground until they’re knee-deep.
