--- a/01_agama/ekottarika/11/EA_11_09.md
+++ b/01_agama/ekottarika/11/EA_11_09.md
@@ -11,7 +11,7 @@ next: EA_11_10.html
 ## Chapter 11: The Non-Returner
 ### 9. Devadatta
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Kalandaka Bamboo Park of Rājagṛha.[\[2\]](#n2){:#ref2} He was accompanied by a large assembly of five hundred monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Kalandaka Bamboo Park of Rājagṛha.[\[2\]](#n2){:#ref2} He was accompanied by a great assembly of five hundred monks.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “How is it, monks? Does anyone see Devadatta’s[\[3\]](#n3){:#ref3} teaching as clean? Still, Devadatta’s evil is quite grave, and he’ll get a punishment for an eon[\[4\]](#n4){:#ref4}, which cannot be cured. I do not see a thread’s breadth of goodness in my Dharma that someone could describe of him. Because of this, I now say that the source of Devadatta’s punishment cannot be cured.
