--- a/01_agama/ekottarika/13/EA_13_06.md
+++ b/01_agama/ekottarika/13/EA_13_06.md
@@ -11,7 +11,7 @@ next: EA_13_07.html
 ## Chapter 13: Profit
 ### 6. Good Deeds
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying on Mount Gṛdhrakūṭa near Rājagṛha. He was accompanied by a large assembly of five hundred monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying on Mount Gṛdhrakūṭa near Rājagṛha. He was accompanied by a great assembly of five hundred monks.
 {:#p1}
 
 2\. One day, Śakra the Lord of Gods[\[2\]](#n2){:#ref2} visited the Bhagavān after nightfall. He bowed his head at the Buddha’s feet and then stood to one side. Śakra then asked about the Tathāgata’s teaching in verse:
