--- a/01_agama/ekottarika/13/EA_13_07.md
+++ b/01_agama/ekottarika/13/EA_13_07.md
@@ -11,7 +11,7 @@ next: ../14/EA_14_01.html
 ## Chapter 13: Profit
 ### 7. Śakra the Lord of Gods
 
-1\. Thus I have heard: One time, the Buddha was staying on Mount Gṛdhrakūṭa near Rājagṛha. He was accompanied by a large assembly of five hundred monks. At the time, Venerable Subhūti was also staying on the side of Mount Gṛdhrakūṭa near Rājagṛha. He had built a separate hut where he sat in meditation.
+1\. Thus I have heard: One time, the Buddha was staying on Mount Gṛdhrakūṭa near Rājagṛha. He was accompanied by a great assembly of five hundred monks. At the time, Venerable Subhūti was also staying on the side of Mount Gṛdhrakūṭa near Rājagṛha. He had built a separate hut where he sat in meditation.
 {:#p1}
 
 2\. Venerable Subhūti then experienced physical pain that became a serious burden, and he thought, “What is producing these painful feelings of mine? What would cease them? Where would they go?” Venerable Subhūti then prepared a seat out in the open. He sat there cross-legged with upright body, proper mindfulness, and focused mind. He contemplated the senses in order to impede his painful feelings.
