--- a/01_agama/madhyama/MA_005.md
+++ b/01_agama/madhyama/MA_005.md
@@ -11,7 +11,7 @@ next: MA_006.html
 ## Chapter 1: The Sevens
 ### 5. The Wood Pile Parable
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Kośala and stayed among the people there. He traveled with a large assembly of monks and followers.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Kośala and stayed among the people there. He traveled with a great assembly of monks and followers.
 {: #p1}
 
 2\. It was then that the Bhagavān suddenly saw from the road a place where there was a large wood pile engulfed in flames.[\[2\]](#n2){:#ref2} After he saw this, the Bhagavān went down to the side of the road, spread out his sitting mat by a tree, and sat down cross-legged.
