--- a/01_agama/madhyama/MA_009.md
+++ b/01_agama/madhyama/MA_009.md
@@ -16,7 +16,7 @@ next: MA_010.html
 
 #### The Homeland Monks Praise Pūrṇa
 
-2\. He was accompanied by a large assembly of monks who had spent the summer retreat there. Venerable Pūrṇa Maitrāyaniputra had spent his summer retreat in the [Buddha’s] homeland.[\[3\]](#n3){: #ref3}
+2\. He was accompanied by a great assembly of monks who had spent the summer retreat there. Venerable Pūrṇa Maitrāyaniputra had spent his summer retreat in the [Buddha’s] homeland.[\[3\]](#n3){: #ref3}
 {:#p2}
 
 3\. It was then that some homeland monks had finished their summer retreat after three months had passed. When they had finished mending robes, they gathered up their robes and bowls, left the homeland, and headed for Rājagṛha. They took a circuitous route to Rājagṛha and stayed at the Veḷuvana monastery. Those homeland monks then went to the Bhagavān, paid homage by prostrating themselves, and withdrew to sit at one side.
