--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -11,7 +11,7 @@ next: MA_017.html
 ## Chapter 2: Related to Deeds
 ### 16. The Kālāmas
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of the Kālāmas accompanied by a large assembly of monks. He went to the town of \*Keśaputra and stayed in a rosewood grove north of it. [\[2\]](#n2){:#ref2}
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of the Kālāmas accompanied by a great assembly of monks. He went to the town of \*Keśaputra and stayed in a rosewood grove north of it. [\[2\]](#n2){:#ref2}
 {:#p1}
 
 ### The Doubt of the Kālāmas
