--- a/01_agama/samyukta/01/SA1_178.md
+++ b/01_agama/samyukta/01/SA1_178.md
@@ -231,7 +231,7 @@ next: ../02/index.html
   </tr>
   <tr>
     <td title='t99.2.36b22'>爾時，世尊於大眾中，被欝多羅僧，現胸而示： 「汝等試看能動如來一毛，以不？」</td>
-    <td id='p33'>33. Right there in that large assembly, the Bhagavān took off his upper robe to show them his chest. “All of you can try and see if you can budge a single hair on the Tathāgata. Is there a way?”</td>
+    <td id='p33'>33. Right there in that great assembly, the Bhagavān took off his upper robe to show them his chest. “All of you can try and see if you can budge a single hair on the Tathāgata. Is there a way?”</td>
   </tr>
   <tr>
     <td title='t99.2.36b24'>爾時，薩遮尼犍子默然低頭，慚愧失色。 爾時，眾中有一離車名突目佉。 從座起，整衣服，合掌白佛言： 「世尊，聽我說譬。」</td>
@@ -299,7 +299,7 @@ next: ../02/index.html
   </tr>
   <tr>
     <td title='t99.2.37a24'>爾時，薩遮尼犍子於彼道中，語諸離車： 「我已請沙門瞿曇及諸大眾供設飯食。 汝等人各辦一釜食，送至我所。」</td>
-    <td id='p47'>47. While they were on the road, Satyaka told the Licchavis, “I’ve offered to provide a meal to the ascetic Gautama and everyone in his large assembly. Each of you, make a pot of food and bring it to my place.”</td>
+    <td id='p47'>47. While they were on the road, Satyaka told the Licchavis, “I’ve offered to provide a meal to the ascetic Gautama and everyone in his great assembly. Each of you, make a pot of food and bring it to my place.”</td>
   </tr>
   <tr>
     <td title='t99.2.37a27'>諸離車各還其家，星夜供辦。 晨朝送至薩遮尼犍子所。 薩遮尼犍子晨朝灑，掃，敷座。 供辦淨水，遣使詣佛，白言： 「時到。」</td>
@@ -307,7 +307,7 @@ next: ../02/index.html
   </tr>
   <tr>
     <td title='t99.2.37b1'>爾時，世尊與諸大眾，著衣持鉢，往薩遮尼犍子所，大眾前坐。 薩遮尼犍子自手奉施清淨飲食，充足大眾。 食已，洗鉢竟。 薩遮尼犍子知佛食竟，洗鉢已，取一卑床於佛前坐。 爾時，世尊為薩遮尼犍子說隨喜偈言：</td>
-    <td id='p49'>49. The Bhagavān and the large assembly then put on their robes and took their bowls to Satyaka’s place, and the congregation sat in front. Satyaka respectfully provided them pure food with his own hands until the assembly was satisfied. After eating, they finished by washing their bowls. When he knew the Buddha was done eating and had washed his bowl, Satyaka fetched a humble seat and sat in front of the Buddha. The Bhagavān then recited these verses to gladden Satyaka:</td>
+    <td id='p49'>49. The Bhagavān and the great assembly then put on their robes and took their bowls to Satyaka’s place, and the congregation sat in front. Satyaka respectfully provided them pure food with his own hands until the assembly was satisfied. After eating, they finished by washing their bowls. When he knew the Buddha was done eating and had washed his bowl, Satyaka fetched a humble seat and sat in front of the Buddha. The Bhagavān then recited these verses to gladden Satyaka:</td>
   </tr>
 <tr>
   <td title='t99.2.37b7'><ul class='verse'>
@@ -345,7 +345,7 @@ next: ../02/index.html
   </tr>
   <tr>
     <td title='t99.2.37b16'>爾時，諸比丘還自住處，舉衣鉢，洗足已。 至世尊所，頭面禮足，退坐一面。 白佛言： 「世尊，我等向於路中自共論議： 『五百離車為薩遮尼犍子供辦飲食，供養世尊、諸大眾。 彼諸離車於何得福？ 薩遮尼犍子於何得福？』」</td>
-    <td id='p51'>51. When the monks got back to their own residences, they put away their robes and bowls and washed their feet. Then, they went to the Bhagavān, bowed their heads at his feet, and withdrew to sit to one side. They said to the Buddha, “Bhagavān, we were debating among ourselves while we were on the road: ‘Those five hundred Licchavis had prepared the meals for Satyaka the Jain disciple to give as offerings to the Bhagavān and his large assembly. What merits will those Licchavis gain from this? What merits will Satyaka the Jain disciple gain from it?’”</td>
+    <td id='p51'>51. When the monks got back to their own residences, they put away their robes and bowls and washed their feet. Then, they went to the Bhagavān, bowed their heads at his feet, and withdrew to sit to one side. They said to the Buddha, “Bhagavān, we were debating among ourselves while we were on the road: ‘Those five hundred Licchavis had prepared the meals for Satyaka the Jain disciple to give as offerings to the Bhagavān and his great assembly. What merits will those Licchavis gain from this? What merits will Satyaka the Jain disciple gain from it?’”</td>
   </tr>
   <tr>
     <td title='t99.2.37b21'>佛告諸比丘： 「彼諸離車供辦飲食為薩遮尼犍子，於薩遮尼犍子所因緣得福。 薩遮尼犍子得福佛功德。 彼諸離車得施有貪、恚、癡因緣果報。 薩遮尼犍子得施無貪、恚、癡因緣果報。」</td>
