--- a/01_agama/dirgha/DA_12.md
+++ b/01_agama/dirgha/DA_12.md
@@ -10,7 +10,7 @@ next: DA_13.html
 # [The Long Discourses](index.html)
 ## 12. Three Categories
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by a large group of 1,250 monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “I will give all of you a discourse on the sublime teaching, the content and expression of which is pure and perfects the religious life. It’s the teaching in three categories. All of you, listen closely and consider it. I will teach this for you.”
