--- a/01_agama/dirgha/DA_23.md
+++ b/01_agama/dirgha/DA_23.md
@@ -10,7 +10,7 @@ next: DA_24.html
 # [The Long Discourses](index.html)
 ## 23. Kūṭatāṇḍya
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was in the country of Kośala accompanied by a large assembly of 1,250 monks. Touring among the people, they arrived north of the priest town of [Khānumata][\[2\]](#n2){:#ref2} in Kośala and stopped to stay in a rosewood grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was in the country of Kośala accompanied by a great assembly of 1,250 monks. Touring among the people, they arrived north of the priest town of [Khānumata][\[2\]](#n2){:#ref2} in Kośala and stopped to stay in a rosewood grove.
 {:#p1}
 
 #### The Priest Kūṭatāṇḍya
@@ -460,7 +460,7 @@ The Buddha said, “Suppose a Tathāgata, Arhat, and Completely Awakened One app
 137\. The priest then saw that the Buddha had silently accepted his request. He got up, bowed to the Buddha, and circled him three times before leaving. He went home and prepared a variety of delicious foods.
 {:#p137}
 
-138\. The next day, the Bhagavān put on his robe and took his bowl. Accompanied by a large assembly of 1,250 monks, he went to the priest’s home where they prepared seats and sat down. The priest then personally served them food, offering it to the Buddha and Saṅgha. When they were finished eating, they left with their bowls. When they were done washing them, the Buddha composed verses for the priest:
+138\. The next day, the Bhagavān put on his robe and took his bowl. Accompanied by a great assembly of 1,250 monks, he went to the priest’s home where they prepared seats and sat down. The priest then personally served them food, offering it to the Buddha and Saṅgha. When they were finished eating, they left with their bowls. When they were done washing them, the Buddha composed verses for the priest:
 {:#p138}
 
 * {:.verse}“Fire is the best of sacrifices;\\
