--- a/01_agama/dirgha/DA_30-1.md
+++ b/01_agama/dirgha/DA_30-1.md
@@ -12,7 +12,7 @@ next: DA_30-2.html
 ### Chapter 1: The Continent of Jambudvīpa
 #### Introduction
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in the Karīrika Hut in Anāthapiṇḍada’s Park at Jeta’s Grove of Śrāvastī. He was accompanied by a large assembly of 1,250 monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in the Karīrika Hut in Anāthapiṇḍada’s Park at Jeta’s Grove of Śrāvastī. He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
 
 2\. After their meal, a group of monks gathered up in the meeting hall. They had this discussion: “Gentlemen, it’s amazing! What causes the destruction of heaven and earth? What causes their formation? What are the countries where sentient beings live?”
