--- a/01_agama/ekottarika/12/EA_12_08.md
+++ b/01_agama/ekottarika/12/EA_12_08.md
@@ -14,16 +14,16 @@ next: EA_12_09.html
 1\. Thus I have heard: One time, the Buddha was staying on Mount Gṛdhrakūṭa near Rājagṛha. He was accompanied by an assembly of 500 great monks.
 {:#p1}
 
-2\. It was then that Devadatta had confused the Saṅgha, injured the Tathāgata’s foot, and instructed Ajātaśatru to arrest his father, who was king, and kill him. He had also killed an arhat nun. He made this statement to a large assembly, “Where is there any evil? Where does that evil come from? Who will receive the result of doing these evils? I didn’t do these evils, but I’ll receive their result?”
+2\. It was then that Devadatta had confused the Saṅgha, injured the Tathāgata’s foot, and instructed Ajātaśatru to arrest his father, who was king, and kill him. He had also killed an arhat nun. He made this statement to a great assembly, “Where is there any evil? Where does that evil come from? Who will receive the result of doing these evils? I didn’t do these evils, but I’ll receive their result?”
 {:#p2}
 
-3\. There was a group of monks who heard this said when they entered Rājagṛha to solicit alms: “That fool Devadatta said this to a large assembly, ‘Where is there any evil? Where does that evil come from? Who will receive the result of doing these evils?’” After they were done eating, that group of monks took their robes and bowls, put there sitting mats over their right shoulders, and went to visit the Bhagavān. They bowed their heads at his feet and sat to one side.
+3\. There was a group of monks who heard this said when they entered Rājagṛha to solicit alms: “That fool Devadatta said this to a great assembly, ‘Where is there any evil? Where does that evil come from? Who will receive the result of doing these evils?’” After they were done eating, that group of monks took their robes and bowls, put there sitting mats over their right shoulders, and went to visit the Bhagavān. They bowed their heads at his feet and sat to one side.
 {:#p3}
 
-4\. That group of monks then said to the Bhagavān, “The fool Devadatta said this to a large assembly: ‘How is it that doing evil brings no misfortune and making merit brings no reward? No one receives good or bad results.’”
+4\. That group of monks then said to the Bhagavān, “The fool Devadatta said this to a great assembly: ‘How is it that doing evil brings no misfortune and making merit brings no reward? No one receives good or bad results.’”
 {:#p4}
 
-5\. The Bhagavān addressed the monks, “There is evil; there are misdeeds. Good and bad actions both have their corresponding results. If that fool Devadatta knew there were good and bad results, then he would wither and become dejected and unhappy. Blood would bubble out from his face. But that Devadatta doesn’t know about those good and bad results, so he said to a large assembly: ‘There are no good and bad results. Doing evil brings no misfortune and doing good brings no fortune.’”
+5\. The Bhagavān addressed the monks, “There is evil; there are misdeeds. Good and bad actions both have their corresponding results. If that fool Devadatta knew there were good and bad results, then he would wither and become dejected and unhappy. Blood would bubble out from his face. But that Devadatta doesn’t know about those good and bad results, so he said to a great assembly: ‘There are no good and bad results. Doing evil brings no misfortune and doing good brings no fortune.’”
 {:#p5}
 
 6\. The Bhagavān then spoke in verse:
