--- a/01_agama/ekottarika/27/EA_27_06.md
+++ b/01_agama/ekottarika/27/EA_27_06.md
@@ -20,7 +20,7 @@ next: ../31/EA_31_08.html
 3\. “What are the four? Now, I have discerned this teaching. Even if ascetics, priests, Māra, the gods of Māra, or any other flying or crawling creatures were amid the great assembly and said that I didn’t achieve this teaching, it would be untrue. I’ve attained this kind of fearlessness in that regard. This is the first kind of fearlessness.
 {: #p3}
 
-4\. “Similarly, I’ve today ended the contaminants, so I’m not subject to the womb. If there were ascetics, priests, or other kinds of sentient beings amid the large assembly that said I have yet to end the contaminants, it would be untrue. This is the second kind of fearlessness.
+4\. “Similarly, I’ve today ended the contaminants, so I’m not subject to the womb. If there were ascetics, priests, or other kinds of sentient beings amid the great assembly that said I have yet to end the contaminants, it would be untrue. This is the second kind of fearlessness.
 {: #p4}
 
 5\. “Now, I’ve become free of foolish and dark teachings or the desire to go back to foolish and dark teachings. That’ll never be possible. If there were ascetics, priests, Māra, gods of Māra, or other kinds of sentient beings amid the great assembly that said I will return to a foolish and dark teaching, this would be untrue. This is the third kind of fearlessness.
